# client-ffi_flutter-plugin

./: .gitignore  android.json  build.sh  ios.json  ios_build.sh
client-ffi/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  client_ffi.h  ios_build.sh
client-ffi/src/: android.rs  api.rs  cnode.rs  config.rs  ffi_error.rs  ffi_result.rs  lib.rs  service.rs
client-ffi/src/api/: android.rs  ios.rs  mod.rs
client-ffi/src/service/: android.rs  ios.rs  mod.rs
client_ffi_demo/: README.md  pubspec.yaml
client_ffi_demo/.fvm/: flutter_sdk
client_ffi_demo/android/: gradle.properties
client_ffi_demo/android/app/: build.gradle
client_ffi_demo/android/app/src/main/: AndroidManifest.xml
client_ffi_demo/android/app/src/profile/: AndroidManifest.xml
client_ffi_demo/ios/Runner/: Info.plist
client_ffi_demo/ios/Runner.xcodeproj/: project.pbxproj
client_ffi_demo/lib/: ISOManager.dart  main.dart
client_ffi_demo/linux/: CMakeLists.txt  my_application.cc
client_ffi_demo/macos/Runner.xcodeproj/: project.pbxproj
client_ffi_demo/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client_ffi_demo/macos/Runner/Configs/: AppInfo.xcconfig
client_ffi_demo/test/: widget_test.dart
client_ffi_demo/web/: index.html  manifest.json
client_ffi_demo/windows/: CMakeLists.txt
client_ffi_demo/windows/runner/: Runner.rc  main.cpp
client_ffi_plugin/: README.md  pubspec.yaml
client_ffi_plugin/android/: build.gradle  settings.gradle
client_ffi_plugin/android/src/main/: AndroidManifest.xml
client_ffi_plugin/android/src/main/java/com/techecho/client_ffi_plugin/: ClientFfiPlugin.java
client_ffi_plugin/android/src/test/java/com/techecho/client_ffi_plugin/: ClientFfiPluginTest.java
client_ffi_plugin/example/: README.md  pubspec.yaml
client_ffi_plugin/example/android/app/: build.gradle
client_ffi_plugin/example/android/app/src/main/: AndroidManifest.xml
client_ffi_plugin/example/integration_test/: plugin_integration_test.dart
client_ffi_plugin/example/ios/Runner/: Info.plist
client_ffi_plugin/example/ios/Runner.xcodeproj/: project.pbxproj
client_ffi_plugin/example/ios/RunnerTests/: RunnerTests.swift
client_ffi_plugin/example/lib/: main.dart
client_ffi_plugin/example/test/: widget_test.dart
client_ffi_plugin/ios/: client_ffi_plugin.podspec
client_ffi_plugin/ios/Classes/: ClientFfiPlugin.swift
client_ffi_plugin/lib/: client_ffi_entry.dart  client_ffi_plugin.dart  client_ffi_plugin_method_channel.dart  client_ffi_plugin_platform_interface.dart  ffi.dart
client_ffi_plugin/test/: client_ffi_plugin_method_channel_test.dart  client_ffi_plugin_test.dart
example/android_rust_ffi_callback/rfapp/: settings.gradle.kts
example/android_rust_ffi_callback/rfapp/app/: build.gradle.kts
example/android_rust_ffi_callback/rfapp/app/src/main/: AndroidManifest.xml
example/android_rust_ffi_callback/rfapp/app/src/main/res/layout/: activity_main.xml  fragment_first.xml  fragment_second.xml
example/android_rust_ffi_callback/rfapp/app/src/main/res/menu/: menu_main.xml
example/android_rust_ffi_callback/rfapp/app/src/main/res/navigation/: nav_graph.xml
example/android_rust_ffi_callback/rfapp/gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
